bugfix, new training runs

--- a/notebooks/03_comparison.ipynb
+++ b/notebooks/03_comparison.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for domain, dataset in datasets_interim.items():\n",
     "    # Split data\n",
-    "    train_data = dataset.sample(frac=0.00025)\n",
-    "    test_data = dataset.drop(train_data.index).head(100)\n",
+    "    train_data = dataset.sample(n=800)\n",
+    "    test_data = dataset.drop(train_data.index).sample(n=4000)\n",
     "\n",
     "    # GPT Classifier\n",
     "    gpt_classifier = GPT4oMini(\n",
@@ -183,58 +183,66 @@
     "        test_data=test_data,\n",
     "    )\n",
     "\n",
-    "    # DSPy optimization\n",
-    "    gpt_classifier.optimize_model()\n",
+    "    try:\n",
+    "        # DSPy optimization\n",
+    "        gpt_classifier.optimize_model()\n",
+    "        \n",
+    "        # Get predictions and metrics for test data\n",
+    "        test_predictions, test_actuals, test_latency = gpt_classifier.predict()\n",
     "\n",
-    "    # Get predictions and metrics for test data\n",
-    "    test_predictions, test_actuals, test_latency = gpt_classifier.predict()\n",
+    "        test_predictions = [int(pred) for pred in test_predictions]\n",
+    "        test_actuals = [int(actual) for actual in test_actuals]\n",
+    "        test_acc = metrics.accuracy_score(test_actuals, test_predictions)\n",
     "\n",
-    "    test_predictions = [int(pred) for pred in test_predictions]\n",
-    "    test_actuals = [int(actual) for actual in test_actuals]\n",
-    "    test_acc = metrics.accuracy_score(test_actuals, test_predictions)\n",
+    "        # Evaluate and save model\n",
+    "        evaluate(\n",
+    "            predictions=test_predictions,\n",
+    "            true_labels=test_actuals,\n",
+    "            domain=domain,\n",
+    "            model_name=\"gpt4o-mini\",\n",
+    "            embed_model=\"ada-002\",\n",
+    "            cost=gpt_classifier.cost,\n",
+    "            latency=test_latency,\n",
+    "            train_acc=test_acc\n",
+    "        )\n",
     "\n",
-    "    # Evaluate and save model\n",
-    "    evaluate(\n",
-    "        predictions=test_predictions,\n",
-    "        true_labels=test_actuals,\n",
-    "        domain=domain,\n",
-    "        model_name=\"gpt4o-mini\",\n",
-    "        embed_model=\"ada-002\",\n",
-    "        cost=gpt_classifier.cost,\n",
-    "        latency=test_latency,\n",
-    "        train_acc=test_acc\n",
-    "    )\n",
+    "        gpt_classifier.save_model(f\"models/gpt-4o-mini-{domain}.json\")\n",
     "\n",
-    "    gpt_classifier.save_model(f\"models/gpt-4o-mini-{domain}.json\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error running GPT model: {e}\")\n",
     "\n",
     "\n",
-    "    # ModernBERT Classifier\n",
-    "    bert_classifier = ModernBERTNLI(domain=domain)\n",
-    "    bert_classifier.classifier.model.to(\"cuda\")\n",
-    "    \n",
-    "    # Test predictions\n",
-    "    test_predictions = []\n",
-    "    test_times = []\n",
-    "    for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
-    "        start_time = time.perf_counter_ns()\n",
-    "        pred = bert_classifier.predict(row[\"prompt\"])\n",
-    "        test_predictions.append(pred)\n",
-    "        test_times.append(time.perf_counter_ns() - start_time)\n",
+    "    try:\n",
+    "        test_data = dataset.sample(n=30_000)\n",
+    "        # ModernBERT Classifier\n",
+    "        bert_classifier = ModernBERTNLI(domain=domain)\n",
+    "        bert_classifier.classifier.model.to(\"cuda\")\n",
+    "        \n",
+    "        # Test predictions\n",
+    "        test_predictions = []\n",
+    "        test_times = []\n",
+    "        for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            pred = bert_classifier.predict(row[\"prompt\"])\n",
+    "            test_predictions.append(pred)\n",
+    "            test_times.append(time.perf_counter_ns() - start_time)\n",
     "\n",
-    "    print(test_predictions)\n",
-    "    test_acc = metrics.accuracy_score(test_data[\"label\"], test_predictions)\n",
-    "    mean_prediction_time = statistics.mean(test_times)\n",
+    "        print(test_predictions)\n",
+    "        test_acc = metrics.accuracy_score(test_data[\"label\"], test_predictions)\n",
+    "        mean_prediction_time = statistics.mean(test_times)\n",
     "\n",
-    "    # Evaluate ModernBERT\n",
-    "    evaluate(\n",
-    "        predictions=test_predictions,\n",
-    "        true_labels=test_data[\"label\"],\n",
-    "        domain=domain,\n",
-    "        model_name=\"modernbert\",\n",
-    "        embed_model=\"bert-base\",\n",
-    "        latency=mean_prediction_time,\n",
-    "        train_acc=test_acc\n",
-    "    )\n"
+    "        # Evaluate ModernBERT\n",
+    "        evaluate(\n",
+    "            predictions=test_predictions,\n",
+    "            true_labels=test_data[\"label\"],\n",
+    "            domain=domain,\n",
+    "            model_name=\"modernbert\",\n",
+    "            embed_model=\"bert-base\",\n",
+    "            latency=mean_prediction_time,\n",
+    "            train_acc=test_acc\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error running ModernBERT model: {e}\")"
    ]
   },
   {
@@ -246,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +267,7 @@
     "    domain: str,\n",
     "    embed_model: str,\n",
     "    save_path: str,\n",
+    "    embedding_time: float = 0.0,\n",
     ") -> None:\n",
     "\n",
     "    # Initialize the classifier\n",
@@ -292,6 +301,7 @@
     "        predictions.append(prediction[0])\n",
     "\n",
     "    mean_prediction_time = statistics.mean(prediction_times)\n",
+    "    total_latency = mean_prediction_time + (embedding_time / len(test_embeds))\n",
     "\n",
     "    # Save the model\n",
     "    try:\n",
@@ -307,14 +317,14 @@
     "        domain,\n",
     "        model_name=model_name,\n",
     "        embed_model=embed_model,\n",
-    "        latency=mean_prediction_time,\n",
+    "        latency=total_latency,\n",
     "        train_acc=train_acc,\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,83 +360,128 @@
     "    prediction_times = []\n",
     "\n",
     "    # fastText\n",
-    "    fasttext_classifier = FastTextClassifier(train_data=train_data, test_data=test_data)\n",
-    "    fasttext_classifier.train()\n",
+    "    try:\n",
+    "        fasttext_classifier = FastTextClassifier(train_data=train_data, test_data=test_data)\n",
+    "        fasttext_classifier.train()\n",
     "\n",
-    "    train_predictions = []\n",
-    "    for _, row in train_data.iterrows():\n",
-    "        query = str(row[\"prompt\"]).replace(\"\\n\", \"\")\n",
-    "        prediction = fasttext_classifier.model.predict(query)\n",
-    "        train_predictions.append(1 if prediction[0][0] == \"__label__1\" else 0)\n",
+    "        train_predictions = []\n",
+    "        for _, row in train_data.iterrows():\n",
+    "            query = str(row[\"prompt\"]).replace(\"\\n\", \"\")\n",
+    "            prediction = fasttext_classifier.model.predict(query)\n",
+    "            train_predictions.append(1 if prediction[0][0] == \"__label__1\" else 0)\n",
     "\n",
-    "    train_acc = metrics.accuracy_score(train_data[\"label\"], train_predictions)\n",
+    "        train_acc = metrics.accuracy_score(train_data[\"label\"], train_predictions)\n",
     "\n",
-    "    for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
-    "        text = str(row[\"prompt\"])\n",
-    "        query = text.replace(\"\\n\", \"\")\n",
+    "        for _, row in tqdm(test_data.iterrows(), total=len(test_data)):\n",
+    "            text = str(row[\"prompt\"])\n",
+    "            query = text.replace(\"\\n\", \"\")\n",
     "\n",
-    "        start_time = time.perf_counter_ns()\n",
-    "        prediction = fasttext_classifier.model.predict(query)\n",
-    "        end_time = time.perf_counter_ns()\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            prediction = fasttext_classifier.model.predict(query)\n",
+    "            end_time = time.perf_counter_ns()\n",
     "\n",
-    "        prediction_times.append(end_time - start_time)\n",
+    "            prediction_times.append(end_time - start_time)\n",
     "\n",
-    "        if prediction[0][0] == \"__label__1\":\n",
-    "            predictions.append(1)\n",
-    "        else:\n",
-    "            predictions.append(0)\n",
+    "            if prediction[0][0] == \"__label__1\":\n",
+    "                predictions.append(1)\n",
+    "            else:\n",
+    "                predictions.append(0)\n",
     "\n",
-    "        actuals.append(row[\"label\"])\n",
+    "            actuals.append(row[\"label\"])\n",
     "\n",
-    "    mean_prediction_time = statistics.mean(prediction_times)\n",
+    "        mean_prediction_time = statistics.mean(prediction_times)\n",
     "\n",
-    "    evaluate(\n",
-    "        predictions,\n",
-    "        true_labels=actuals,\n",
-    "        domain=domain,\n",
-    "        model_name=\"fastText\",\n",
-    "        embed_model=\"fastText\",\n",
-    "        latency=mean_prediction_time,\n",
-    "        train_acc=train_acc,\n",
-    "    )\n",
-    "    \n",
-    "    fasttext_classifier.model.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n",
+    "        evaluate(\n",
+    "            predictions,\n",
+    "            true_labels=actuals,\n",
+    "            domain=domain,\n",
+    "            model_name=\"fastText\",\n",
+    "            embed_model=\"fastText\",\n",
+    "            latency=mean_prediction_time,\n",
+    "            train_acc=train_acc,\n",
+    "        )\n",
+    "        \n",
+    "        fasttext_classifier.model.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error running fastText model: {e}\")\n",
     "\n",
     "    for model_name, embedding_model in embedding_models.items():\n",
+    "        embed_train_times = []\n",
+    "        embed_test_times = []\n",
+    "        \n",
+    "        # Add timing for embedding creation\n",
     "        if model_name == \"tf_idf\":\n",
+    "            # Time the fitting process\n",
+    "            start_time = time.perf_counter_ns()\n",
     "            embedding_model.fit(train_data[\"prompt\"])\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            fit_time = end_time - start_time\n",
+    "            print(f\"TF-IDF fitting time: {fit_time/1e9:.2f} seconds\")\n",
+    "            \n",
     "            with open(f\"models/tfidf_{domain}.pkl\", \"wb\") as f:\n",
     "                pickle.dump(embedding_model, f)\n",
+    "            \n",
+    "            # Time the transform process for training data\n",
+    "            start_time = time.perf_counter_ns()\n",
     "            train_embeds = embedding_model.transform(train_data[\"prompt\"])\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            embed_train_times.append(end_time - start_time)\n",
+    "            \n",
+    "            # Time the transform process for test data\n",
+    "            start_time = time.perf_counter_ns()\n",
     "            test_embeds = embedding_model.transform(test_data[\"prompt\"])\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            embed_test_times.append(end_time - start_time)\n",
     "        else:\n",
+    "            # Time the embedding process for training data\n",
+    "            start_time = time.perf_counter_ns()\n",
     "            train_embeds = np.array(list(embedding_model.embed(train_data[\"prompt\"])))\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            embed_train_times.append(end_time - start_time)\n",
+    "            \n",
+    "            # Time the embedding process for test data\n",
+    "            start_time = time.perf_counter_ns()\n",
     "            test_embeds = np.array(list(embedding_model.embed(test_data[\"prompt\"])))\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "            embed_test_times.append(end_time - start_time)\n",
+    "        \n",
+    "        # Calculate average embedding times\n",
+    "        mean_train_embed_time = statistics.mean(embed_train_times)\n",
+    "        mean_test_embed_time = statistics.mean(embed_test_times)\n",
+    "        print(f\"{model_name} embedding time - Train: {mean_train_embed_time/1e9:.2f}s, Test: {mean_test_embed_time/1e9:.2f}s\")\n",
+    "        \n",
+    "        # Continue with model training and evaluation\n",
+    "        try:\n",
+    "            # Train and evaluate SVM model\n",
+    "            train_and_evaluate_model(\n",
+    "                model_name=\"SVM\",\n",
+    "                train_embeds=train_embeds,\n",
+    "                test_embeds=test_embeds,\n",
+    "                train_labels=train_data[\"label\"],\n",
+    "                test_labels=test_data[\"label\"],\n",
+    "                domain=domain,\n",
+    "                embed_model=model_name,\n",
+    "                save_path=f\"models/SVM_{domain}_{model_name}.pkl\",\n",
+    "                embedding_time=mean_test_embed_time  # Pass the embedding time\n",
+    "            )\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error running SVM model: {e}\")\n",
     "\n",
-    "    \n",
-    "        # Train and evaluate SVM model\n",
-    "        train_and_evaluate_model(\n",
-    "            model_name=\"SVM\",\n",
-    "            train_embeds=train_embeds,\n",
-    "            test_embeds=test_embeds,\n",
-    "            train_labels=train_data[\"label\"],\n",
-    "            test_labels=test_data[\"label\"],\n",
-    "            domain=domain,\n",
-    "            embed_model=model_name,\n",
-    "            save_path=f\"models/SVM_{domain}_{model_name}.pkl\",\n",
-    "        )\n",
-    "\n",
-    "        # Train and evaluate XGBoost model\n",
-    "        train_and_evaluate_model(\n",
-    "            model_name=\"XGBoost\",\n",
-    "            train_embeds=train_embeds,\n",
-    "            test_embeds=test_embeds,\n",
-    "            train_labels=train_data[\"label\"],\n",
-    "            test_labels=test_data[\"label\"],\n",
-    "            domain=domain,\n",
-    "            embed_model=model_name,\n",
-    "            save_path=f\"models/XGBoost_{domain}_{model_name}.json\",\n",
-    "        )"
+    "        try:\n",
+    "            # Train and evaluate XGBoost model\n",
+    "            train_and_evaluate_model(\n",
+    "                model_name=\"XGBoost\",\n",
+    "                train_embeds=train_embeds,\n",
+    "                test_embeds=test_embeds,\n",
+    "                train_labels=train_data[\"label\"],\n",
+    "                test_labels=test_data[\"label\"],\n",
+    "                domain=domain,\n",
+    "                embed_model=model_name,\n",
+    "                save_path=f\"models/XGBoost_{domain}_{model_name}.json\",\n",
+    "                embedding_time=mean_test_embed_time  # Pass the embedding time\n",
+    "            )\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error running XGBoost model: {e}\")"
    ]
   },
   {
@@ -442,18 +497,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.11"
   }
  },
  "nbformat": 4,
