--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -1209,7 +1209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt-classification",
+   "display_name": "bc",
    "language": "python",
    "name": "python3"
   },
@@ -1223,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
