--- a/notebooks/03_comparison.ipynb
+++ b/notebooks/03_comparison.ipynb
@@ -1,23 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#TODO\n",
-    "pridat timer aj pri embeddingu\n",
-    "\n",
-    "seed=42\n",
-    "\n",
-    "seed_1=1 "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pickle\n",
     "import random\n",
     "import statistics\n",
@@ -27,7 +16,6 @@
     "import onnxruntime as ort\n",
     "import pandas as pd\n",
     "import torch\n",
-    "import os\n",
     "from dotenv import load_dotenv\n",
     "from fastembed import TextEmbedding\n",
     "from sklearn import metrics\n",
@@ -130,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,13 +142,7 @@
     "    providers=[\"CUDAExecutionProvider\"],\n",
     ")\n",
     "\n",
-    "tfidf_embedding = TfidfVectorizer()\n",
-    "\n",
-    "embedding_models = {\n",
-    "    \"mini\": mini_embedding,\n",
-    "    \"tfidf\": tfidf_embedding,\n",
-    "    \"baai\": baai_embedding,\n",
-    "}"
+    "tfidf_embedding = TfidfVectorizer()"
    ]
   },
   {
@@ -197,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -997,9 +979,10 @@
     "    try:\n",
     "        # DSPy optimization\n",
     "        gpt_classifier.optimize_model()\n",
-    "        \n",
+    "\n",
     "        # Get predictions and metrics for test data\n",
     "        test_predictions, test_actuals, test_latency = gpt_classifier.predict()\n",
+    "        test_latency = statistics.mean(test_latency)\n",
     "\n",
     "        test_predictions = [int(pred) for pred in test_predictions]\n",
     "        test_actuals = [int(actual) for actual in test_actuals]\n",
@@ -1028,7 +1011,7 @@
     "        # ModernBERT Classifier\n",
     "        bert_classifier = ModernBERTNLI(domain=domain)\n",
     "        bert_classifier.classifier.model.to(\"cuda\")\n",
-    "        \n",
+    "\n",
     "        # Test predictions\n",
     "        test_predictions = []\n",
     "        test_times = []\n",
@@ -1167,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1662,21 +1645,21 @@
     "            latency=mean_prediction_time,\n",
     "            train_acc=train_acc,\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        fasttext_classifier.model.save_model(f\"models/fastText_{domain}_fasttext.bin\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error running fastText model: {e}\")\n",
     "\n",
     "    for model_name, embedding_model in embedding_models.items():\n",
     "        embed_times: float = None\n",
-    "        \n",
+    "\n",
     "        # Add timing for embedding creation\n",
     "        if model_name == \"tf_idf\":\n",
     "            embedding_model.fit(train_data[\"prompt\"])\n",
-    " \n",
+    "\n",
     "            with open(f\"models/tfidf_{domain}.pkl\", \"wb\") as f:\n",
     "                pickle.dump(embedding_model, f)\n",
-    "            \n",
+    "\n",
     "            # Time the transform process for training data\n",
     "            start_time = time.perf_counter_ns()\n",
     "            train_embeds = embedding_model.transform(train_data[\"prompt\"])\n",
@@ -1736,7 +1719,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prompt-validation",
    "language": "python",
    "name": "python3"
   },
